application/opseng-challenge-app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opseng-challenge-app
  labels:
    role: opseng-challenge-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    role: opseng-challenge-app
